Fixed chat name overflow

--- a/frontend/src/app/chat/chat.component.sass
+++ b/frontend/src/app/chat/chat.component.sass
@@ -28,7 +28,7 @@
 		height: 30px
 		border-radius: 50%
 	.chat-list-name
-		display: inline-flex
+		display: block
 		max-width: 100%
 		white-space: nowrap
 		line-height: 30px
